# order_service

./: Cargo.toml  insert_data.sql
src/: db.rs  main.rs
templates/: order.html
