[package]
name = "order_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
log = "0.4"
env_logger = "0.10"
askama = "0.11"
tower-http = { version = "0.3", features = ["fs"] }
hyper = { version = "0.14", features = ["full"] }
http = "0.2.12"